Changelog
=========

All notable changes to this project will be documented in this file.

The format is based on `Keep a Changelog <http://keepachangelog.com/>`_
and this project adheres to `Semantic Versioning <http://semver.org/>`_

UNRELEASED VERSION
------------------

0.3.21 - 2019-10-09
-------------------

Improved
~~~~~~~~

- Removed annoying warning message when resource was accessed

0.3.20 - 2019-10-09
-------------------

Fixed
~~~~~

- now possible to create/retrieve data for resources properly. XNAT would
  only return the catalog when queried and not the object information. Created
  a work around that catches the case in get_json and retrieves the json data
  from the listing instead and presents it in a format consistent with the
  REST API so other code still functions.

0.3.19 - 2019-09-20
-------------------

Added
~~~~~

- xnatpy changes the user-agent header to give detailed information about
  the xnatpy client running.
- option to have some progress logging/printing added to the download_dir
  methods for projects and subjects
- add method to find specific sessions in the prearchive

Improved
~~~~~~~~

- Avoid use of get_source when generating xnatpy module code, which should help
  when compiling xnatpy to a binary (py2exe etc)

0.3.18 - 2019-06-06
-------------------

Improved
~~~~~~~~

- Added ``force`` flag to ``ScanData.read_dicom``
- Added ``open`` to ``PrearchiveFile`` (same as for FileData)
- Added ``read_dicom`` to ``PrearchiveScan`` (same as for ScanData)
- Documentation improved, added code reference and changelog into docs

Fixed
~~~~~

- Flag extension_types=False now also working for 1.7 servers

0.3.17 - 2019-04-04
-------------------

Added
~~~~~

- Can open FileData object with ``file.open()`` to get a file-like object
  that can be used similar to a local file.
- Added ``read_dicom()`` to ScanData to read the dicom header/file with pydicom
- ``external_uri`` method to get a full external uri of an XNAT object
